ajustes pedidos pela banca

--- a/inst/book/conclusoes.qmd
+++ b/inst/book/conclusoes.qmd
@@ -22,12 +22,12 @@ A contribuição para a comunidade de programadoras e programadores está no pac
 
 Com isso, pode-se concluir que os quatro objetivos descritos na @sec-objetivos foram atendidos. O modelo proposto foi descrito e suas propriedades estudadas. Um repositório de dados completo foi construído e disponibilizado no repositório do pacote [`{captcha}`](https://github.com/decryptr/captcha/releases), contendo dados e modelos ajustados. O método foi utilizado e testado para diferentes Captchas e diferentes situações, com sucesso. Finalmente, foi disponibilizado um pacote computacional aberto, possibilitando a resolução de novos Captchas que aparecerem em serviços públicos.
 
-É evidente, no entanto, que o trabalho apresenta algumas limitações. Na parte teórica, os resultados matemáticos podem ser desenvolvidos com maior detalhamento. Especificamente, podem ser apresentadas e testadas outras propostas de função de perda, eventualmente com implementações que aceitem o uso de aceleradores com placas de vídeo. A escolha de apenas uma alternativa foi feita por conta do foco em resolver o problema de pesquisa (os Captchas), no lugar da discussão mais aprofundada do aprendizado com rótulos parciais.
+É evidente, no entanto, que o trabalho apresenta algumas limitações. Na parte teórica, os resultados matemáticos podem ser desenvolvidos com maior detalhamento. Especificamente, podem ser apresentadas e testadas outras propostas de função de perda, eventualmente com implementações que aceitem o uso de aceleradores com placas de vídeo. Além disso, seria interessante modificar as probabilidades fornecidas pelo modelo nos casos em que o rótulo está errado, para que o modelo nunca dê probabilidade zero para algum rótulo. A escolha de apenas uma alternativa de perda e do uso direto dos resultados fornecidos pelo oráculo foi feita por conta do foco em resolver o problema de pesquisa (os Captchas), no lugar da discussão mais aprofundada do aprendizado com rótulos parciais.
 
 Outra limitação importante do estudo está na aplicação iterada. A pesquisa apresentou essa parte como um resultado adicional, mas os limites da aplicação iterada ainda não foram estudados de forma completa. Essa limitação pode ser entendida também como um próximo passo, que seria a solução de *online learning*.
 
 Uma extensão possível desta pesquisa é a criação de um modelo que aprende diretamente da *web*, sem a separação de passos descrita pelo WAWL. A técnica consiste em inserir as funções de acesso e teste do Captcha como método de obtenção de amostras do *dataset* do Captcha (mais detalhes na @sec-captcha-do-zero). Dessa forma, o modelo pode obter novos dados em cada *minibatch*, indefinidamente. O experimento realizado com *online learning* apresentou resultados promissores, mas ainda carece de uma investigação sistemática. Se funcionar bem, a vantagem dessa abordagem é que não precisa de uma pessoa para escrever as aplicações iteradas, facilitando o método WAWL. A desvantagem é que o ajuste do modelo depende de uma conexão com a internet, mais suscetível a problemas de conexão, que precisam ser tratados com cuidado.
 
-Outra extensão oportuna seria a criação de um modelo geral de resolução de Captchas, desenvolvido a partir das bases que foram construídas durante a pesquisa. Esse modelo poderia ser utilizado como passo inicial do WAWL para a resolução de novos Captchas, podendo até afastar completamente a necessidade de anotação manual. No momento, não é possível saber se esse modelo funcionaria na prática de forma consistente, já que i) nada garante que ele tenha uma acurácia maior que 10% para um novo Captcha, mesmo se construído com base em Captchas de várias origens e ii) foram encontradas evidências de que os modelos com acurácia menor de 10% têm mais dificuldades em melhorar com o método WAWL quando o Captcha não aceita vários chutes.
+Outra extensão oportuna seria a criação de um modelo geral de resolução de Captchas, desenvolvido a partir das bases que foram construídas durante a pesquisa. O modelo precisaria lidar com diferentes alfabetos e comprimentos dos Captchas, o que tornaria o aprendizado mais complicado. Esse modelo poderia ser utilizado como passo inicial do WAWL para a resolução de novos Captchas, podendo até afastar completamente a necessidade de anotação manual. No momento, não é possível saber se esse modelo funcionaria na prática de forma consistente, já que i) nada garante que ele tenha uma acurácia maior que 10% para um novo Captcha, mesmo se construído com base em Captchas de várias origens e ii) foram encontradas evidências de que os modelos com acurácia menor de 10% têm mais dificuldades em melhorar com o método WAWL quando o Captcha não aceita vários chutes.
 
 A presente tese foi fruto de um longo processo de análise e desenvolvimento, investigando os aspectos relevantes dos Captchas de textos em imagens. Espera-se que a metodologia proposta, os resultados obtidos e os pacotes computacionais desenvolvidos sejam úteis na luta pela abertura dos dados públicos, especialmente no judiciário. O uso de Captchas em sites de serviços públicos deve acabar.
