--- a/inst/book/introducao.qmd
+++ b/inst/book/introducao.qmd
@@ -16,6 +16,8 @@ Captcha (*Completely Automated Public Turing test to tell Computers and Humans A
 
 Um Captcha pode ser classificado como uma variação do teste de Turing [@turing2009]. A diferença no caso do Captcha é que a avaliação da humanidade do agente é feita por um robô ao invés de uma pessoa -- por isso o termo *automated*. Em algumas situações, Captchas também podem ser entendidos como **testes de Turing reversos**, apesar dos autores originais afastarem essa caracterização [@vonahnTellingHumansComputers2002].
 
+A tarefa de resolver Captchas também pode ser pensada como uma variação do reconhecimento óptico de caracteres (*Optical Character Recognition*, OCR). No entanto, os Captchas objetivam enganar justamente as ferramentas de OCR, através de distorções aplicadas às imagens. Como efeito, tais ferramentas costumam apresentar baixo poder preditivo nesse desafio.
+
 Captchas estão presentes em toda a internet. Inicialmente criados para prevenir *spam* (*Sending and Posting Advertisement in Mass*), os desafios se tornaram populares rapidamente [@vonahnReCAPTCHAHumanBasedCharacter2008], sendo utilizados como forma de evitar o uso indevido de aplicações da *web*. Algumas ações que os desafios podem ajudar a evitar são:
 
 -   Criação de contas falsas nos sites.
@@ -35,7 +37,7 @@ A Constituição Federal de 1988 (CF), em seu [inciso XXXIII do art. 5º](https:
 
 A LAI, apesar de trazer diversos benefícios à sociedade, tem dois problemas. O primeiro é o **esforço**: tanto a pessoa/órgão que solicita os dados, quanto o órgão que retorna os dados precisam trabalhar para disponibilizar as informações, sendo necessário deslocar equipes para realizar os levantamentos pedidos. O segundo é o **formato**: os dados enviados como resultado de pedidos de LAI podem chegar em formatos inadequados para consumo da solicitante, muitas vezes em *Portable Document Format* (PDF), que dificulta a leitura e análise dos dados [@michener2015, pág. 55]; além disso, como o levantamento é realizado de forma individualizada, o mesmo pedido feito em diferentes períodos (e.g. uma atualização mensal dos dados) pode vir em formatos diferentes, dificultando a leitura e arrumação dos dados.
 
-Uma forma eficiente de evitar os problemas de esforço e formato em pedidos de LAI é disponibilizar os dados de **forma aberta**. Como definido pela *Open Knowledge Foundation* (OKFN), a base de dados "deve ser fornecida em uma forma conveniente e modificável isento de obstáculos tecnológicos desnecessários para a realização dos direitos licenciados. Especificamente, os dados devem ser legíveis por máquina, disponíveis em todo o seu volume, e fornecidos em um formato aberto (ou seja, um formato com sua especificação livremente disponível, e publicada sem quaisquer restrições, monetárias ou não, da sua utilização) ou, no mínimo, podem ser processados com pelo menos uma ferramenta de software livre e gratuita."[^okfn]
+Uma forma eficiente de evitar os problemas de esforço e formato em pedidos de LAI é disponibilizar os dados de **forma aberta**. Como definido pela *Open Knowledge Foundation* (OKFN), a base de dados "deve ser fornecida em uma forma conveniente e modificável, isenta de obstáculos tecnológicos desnecessários para a realização dos direitos licenciados. Especificamente, os dados devem ser legíveis por máquina, disponíveis em todo o seu volume, e fornecidos em um formato aberto (ou seja, um formato com sua especificação livremente disponível, e publicada sem quaisquer restrições, monetárias ou não, da sua utilização) ou, no mínimo, podem ser processados com pelo menos uma ferramenta de software livre e gratuita."[^okfn]
 
 [^okfn]: Link: <https://okfn.org/opendata/>. Último acesso em 01/11/2022.
 
@@ -79,7 +81,7 @@ Para compreender completamente o avanço que a tese representa, no entanto, é n
 
 O primeiro texto técnico sobre Captchas foi publicado por @vonahnTellingHumansComputers2002. O texto apresenta o Captcha e seu significado através do problema de geração de *emails* automáticos no Yahoo. Em seguida, apresenta alguns exemplos de candidatos a Captcha, com tarefas de reconhecimento de padrões ou textos. Uma característica interessante dos autores sobre o Captcha é que suas imagens devem ser disponíveis publicamente. O texto também faz a conexão entre a tarefa dos Captchas e os desafios da inteligência artificial. Um ponto a destacar é que os autores incentivam pesquisas para resolver Captchas, pois isso implica em avanços na inteligência artificial. O site original do projeto, [*The Captcha Project*](https://web.archive.org/web/20010723114217/http://www.captcha.net/), foi lançado em 2000.
 
-O relatório técnico de @vonahnTellingHumansComputers2002 não foi o primeiro a apresentar o nome Captcha, nem suas aplicações. @reshefMethodSystemDiscriminating2005 foi o primeiro registro de patente com o termo e @lillibridgeMethodSelectivelyRestricting2001 foi o primeiro registro de patente que implementou uma solução aos sistemas de Captchas. No entanto, o relatório técnico de 2002 é o primeiro que reconhecidamente trata do tema como um problema de inteligência artificial como um teste de Turing automatizado.
+O relatório técnico de @vonahnTellingHumansComputers2002 não foi o primeiro a apresentar o nome Captcha, nem suas aplicações. @reshefMethodSystemDiscriminating2005 foi o primeiro registro de patente com o termo e @lillibridgeMethodSelectivelyRestricting2001 foi o primeiro registro de patente que implementou uma solução aos sistemas de Captchas. No entanto, o relatório técnico de 2002 é o primeiro que reconhecidamente trata do tema como um problema de inteligência artificial.
 
 Os artigos mais conhecidos de introdução aos Captchas são @vonahnCaptchaTellingHumans2003 e @vonahnTellingHumansComputers2004. O conteúdo dos trabalhos é o mesmo, sendo o primeiro deles na forma de apresentação e o segundo na forma de relatório. Um detalhe interessante é a ênfase dos autores no termo *Public* dos Captchas, mostrando a preocupação em manter os códigos públicos.
 
@@ -108,7 +110,7 @@ O reCaptcha v1 aproveitou o tempo das pessoas que resolvem Captchas para digital
 knitr::include_graphics("assets/img/recaptcha-v1.png")
 ```
 
-Curiosamente, foi com a própria Google que os resolvedores ficaram em vantagem na luta contra geradores. Os modelos de inteligência artificial continuaram avançando, notadamente com o avanço dos modelos de redes neurais profundas [@lecun2015]. No trabalho de @goodfellow2013, todos funcionários da Google na época, foi apresentado um modelo de redes neurais convolucionais que resolvia o reCaptcha v1 com 99,8% de acurácia. No ano seguinte, em 2014, a Google descontinuou o reCaptcha v1, lançando o reCaptcha v2.[^introducao-8]
+Curiosamente, foi com a própria Google que os resolvedores ficaram em vantagem na luta contra geradores. Os modelos de inteligência artificial continuaram avançando, notadamente com o avanço dos modelos de redes neurais profundas [@lecun2015]. No trabalho de @goodfellow2013, foi apresentado um modelo de redes neurais convolucionais que resolvia o reCaptcha v1 com 99,8% de acurácia. No ano seguinte, em 2014, a Google descontinuou o reCaptcha v1, lançando o reCaptcha v2.[^introducao-8]
 
 [^introducao-8]: *Are you a robot? Introducing No Captcha reCaptcha.* Acessível no [blog da Google](https://security.googleblog.com/2014/12/are-you-robot-introducing-no-captcha.html). Último acesso em 01/11/2022.
 
@@ -129,7 +131,7 @@ Com o advento do reCaptcha v2, a pergunta de interesse dos resolvedores de Captc
 
 Até o momento de escrita da tese, não existia um modelo geral que resolvesse com alta acurácia todos os desafios colocados pelo reCaptcha v2 e seus concorrentes. No entanto, vários avanços apareceram no sentido de reduzir a quantidade de imagens anotadas para criar candidatos a resolvedores. Dentre eles, os mais significativos são os baseados nas redes generativas adversariais (*Generative Adversarial Networks,* ou GANs), propostas no famoso trabalho de @goodfellowGenerativeAdversarialNetworks2014. O primeiro trabalho que utiliza modelos generativos no contexto de Captchas mostrou uma redução de 300x na quantidade de dados anotados necessários para resolver um Captcha [@george2017].  Nesse caso, os autores propõem uma rede diferente do GAN, chamada *Recursive Cortical Network*, ou RCN. Outros trabalhos mais recentes [@ye2018; @wang2021] avançam ainda mais na pesquisa, reduzindo o trabalho de classificação para um novo Captcha de texto para aproximadamente 2 horas.
 
-Mas foi em 2018, com o reCaptcha v3, que a Google fez um passo definitivo. Com a nova versão, as verificações do navegador *web* passaram a ser muito mais poderosas, sendo raros os casos em que o site fica em dúvidas se a pessoa é ou não um robô. Versões mais recentes, como o reCaptcha *Enterprise*, de 2020, ainda permitem que as mantenedoras os sites façam o ajuste fino de modelos de detecção de robôs. Dessa forma, desafios de reconhecimento de texto e objetos em imagens perderam a importância.
+Mas foi em 2018, com o reCaptcha v3, que a Google fez um passo definitivo. Com a nova versão, as verificações do navegador *web* passaram a ser muito mais poderosas, sendo raros os casos em que o site fica em dúvidas se a pessoa é ou não um robô. Versões mais recentes, como o reCaptcha *Enterprise*, de 2020, ainda permitem que as mantenedoras dos sites façam o ajuste fino de modelos de detecção de robôs. Dessa forma, desafios de reconhecimento de texto e objetos em imagens perderam a importância.
 
 Então, no final, quem venceu a luta de geradores e resolvedores? Na verdade, nenhuma das duas! O que ocorreu com o reCaptcha v3 e seus sucessores foi, no fundo, uma mudança de perspectiva: o Captcha deixou de ser um sistema **passivo** e passou a ser um sistema **ativo** de verificação do agente. Ao invés de criar uma tarefa difícil de resolver por robôs e fácil de resolver por pessoas, os sistemas criaram uma camada de verificação da sessão de acesso do usuário, incluindo análises do navegador, dos *cookies* e dos padrões de cliques. Antes mesmo de chegar no desafio de reconhecimento, o algoritmo de acesso precisa enganar os verificadores. Essa tarefa é muito mais parecida com um problema de *cyberataque* do que uma tarefa de inteligência artificial.
 
