alteração para versão final

--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -147,6 +147,12 @@ $endif$
 \babelhyphenation[brazilian]{mo-di-fi-ca-ções}
 \babelhyphenation[brazilian]{re-pre-sen-tar}
 \babelhyphenation[brazilian]{a-pre-sen-ta-das}
+\babelhyphenation[brazilian]{re-co-nhe-ci-men-to}
+\babelhyphenation[brazilian]{des-cre-ven-do}
+\babelhyphenation[brazilian]{des-co-nhe-ci-da}
+\babelhyphenation[brazilian]{con-si-de-ra-da}
+\babelhyphenation[brazilian]{trans-pa-ren-te}
+\babelhyphenation[brazilian]{cons-tru-ção}
 % \babelhyphenation[english]{what-ever}
 
 % Estes comandos definem o título e autoria do trabalho e devem sempre ser
@@ -178,16 +184,17 @@ $endif$
 \defesa{
   nivel=doutorado, % mestrado, doutorado ou tcc
   % É a versão para defesa ou a versão definitiva?
-  %definitiva,
+  definitiva,
   % É qualificação?
   %quali,
   programa={Estatística},
   membrobanca={Prof. Dr. Victor Fossaluza (orientador) -- IME-USP},
   % Em inglês, não há o "ª"
   %membrobanca{Prof. Dr. Fulana de Tal (advisor) -- IME-USP [sem ponto final]},
+  membrobanca={Profa. Dra. Daiane Zuanetti -- UFSCar},
+  membrobanca={Profa. Dra. Florencia Leonardi -- IME-USP},
+  membrobanca={Prof. Dr. Jony Arrais -- UFF},
   membrobanca={Prof. Dr. Rafael Izbicki -- UFSCar},
-  membrobanca={Prof. Dr. Rafael Stern -- IME-USP},
-  membrobanca={Prof. Dr. Renato Vicente -- IME-USP},
   % Se não houve bolsa, remova
   %
   % Norma sobre agradecimento por auxílios da FAPESP:
